Adding Book and Bookshelf classes, with much left to do.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="backward">&lt;&lt;</string>
     <string name="forward">&gt;&gt;</string>
     <string name="play">**</string>
+    <string name="switchToPlayer">Now playing Title...</string>
 </resources>
